Fix the display of special banners, such as trophy banners.
When I moved the CSS for the special banners out of common.less, I
messed up on the rule name, resulting in the special banner CSS never
being used. This fixes the rules to use things like '.banner.yay' and
not '.banner .yay'.

--- a/reviewboard/static/rb/css/ui/boxes.less
+++ b/reviewboard/static/rb/css/ui/boxes.less
@@ -15,7 +15,7 @@
 }
 
 .box {
-  .important {
+  &.important {
     background-color: #fdf2a0;
     background-image: url('@{img_base}/gold_box_top_bg.png');
     border: 1px #b7a93e solid;
@@ -27,7 +27,7 @@
     }
   }
 
-  .tip {
+  &.tip {
     background-color: #fdf2a0;
     background-image: url('@{img_base}/gold_box_top_bg.png');
     border: 1px #b7a93e solid;
@@ -42,7 +42,7 @@
     }
   }
 
-  .yay {
+  &.yay {
     background-color: #fdf2a0;
     background-image: url('@{img_base}/gold_box_top_bg.png');
     border: 1px #b7a93e solid;
